--- a/apps/meal-delivery/src/app/shared/nav/nav.component.html
+++ b/apps/meal-delivery/src/app/shared/nav/nav.component.html
@@ -14,6 +14,9 @@
       <a class="nav-link" routerLink="/user">Gebruikers</a>
     </li>
     <li class="nav-item">
+      <a class="nav-link" routerLink="/studentHouse">Studentenhuizen</a>
+    </li>
+    <li class="nav-item">
       <a class="nav-link" routerLink="/about-us">Over ons</a>
     </li>
   </ul>
