--- a/apps/meal-delivery/src/app/pages/meal/edit/edit.component.html
+++ b/apps/meal-delivery/src/app/pages/meal/edit/edit.component.html
@@ -92,6 +92,7 @@
       </div>
       <div *ngIf="componentExists && meal" class="col move20up">
         <button type="submit" class="btn btn-primary mx-2" [disabled]="!mealEditForm.valid">
+          <!-- <div *ngIf="componentExists && meal && authService.userMayEdit(meal.restaurantId) | async"> -->
           <div *ngIf="componentExists && meal">
             Maaltijd bewerken
           </div>
