--- a/apps/meal-delivery/src/app/auth/login/login.component.html
+++ b/apps/meal-delivery/src/app/auth/login/login.component.html
@@ -19,7 +19,7 @@
             <i class="fas fa-lock fa-lg me-3 fa-fw"></i>
             <div class="form-outline flex-fill mb-0">
               <input type="password" id="password" name="password" class="form-control" [(ngModel)]="formData.password"
-                #name="ngModel" />
+                #password="ngModel" />
               <label class="form-label" for="password">Wachtwoord</label>
             </div>
           </div>
