--- a/apps/meal-delivery/src/app/app.component.html
+++ b/apps/meal-delivery/src/app/app.component.html
@@ -1,6 +1,7 @@
 <div class="background">
   <app-nav></app-nav>
   <div class="container-fluid move100right move30down">
+    <fab-util-alert></fab-util-alert>
     <router-outlet></router-outlet>
   </div>
   <app-footer></app-footer>
