--- a/apps/meal-delivery/src/app/auth/login/login.component.html
+++ b/apps/meal-delivery/src/app/auth/login/login.component.html
@@ -8,7 +8,17 @@
             <i class="fas fa-envelope fa-lg me-3 fa-fw"></i>
             <div class="form-outline flex-fill mb-0">
               <input type="text" id="username" name="username" class="form-control" [(ngModel)]="formData.username"
-                #name="ngModel" />
+                #username="ngModel" minlength="3" required [ngClass]="{
+                  'is-invalid': username.invalid && username.touched
+              }" />
+              <div *ngIf="username.invalid && username.touched" class="invalid-feedback">
+                <div *ngIf="username.errors!['required']">
+                  Gebruikersnaam is verplicht
+                </div>
+                <div *ngIf="username.errors!['minlength']">
+                  Gebruikersnaam moet minimaal 3 karakters hebben.
+                </div>
+              </div>
               <label class="form-label" for="username">Gebruikersnaam</label>
             </div>
           </div>
@@ -19,7 +29,17 @@
             <i class="fas fa-lock fa-lg me-3 fa-fw"></i>
             <div class="form-outline flex-fill mb-0">
               <input type="password" id="password" name="password" class="form-control" [(ngModel)]="formData.password"
-                #password="ngModel" />
+                #password="ngModel" minlength="3" required [ngClass]="{
+                  'is-invalid': password.invalid && password.touched
+              }" />
+              <div *ngIf="password.invalid && password.touched" class="invalid-feedback">
+                <div *ngIf="password.errors!['required']">
+                  Wachtwoord is verplicht
+                </div>
+                <div *ngIf="password.errors!['minlength']">
+                  Wachtwoord moet minimaal 3 karakters hebben.
+                </div>
+              </div>
               <label class="form-label" for="password">Wachtwoord</label>
             </div>
           </div>
