--- a/apps/meal-delivery/src/app/auth/login/login.component.html
+++ b/apps/meal-delivery/src/app/auth/login/login.component.html
@@ -52,8 +52,7 @@
             Inloggen
           </button>
           <label class="move20right">
-            <a
-              href="https://accounts.google.com/signin/v2/recoveryidentifier?flowName=GlifWebSignIn&flowEntry=AccountRecovery">Wachtwoord
+            <a routerLink="/register">Wachtwoord
               vergeten?</a>
           </label>
         </div>
