--- a/apps/meal-delivery/src/app/auth/register/register.component.html
+++ b/apps/meal-delivery/src/app/auth/register/register.component.html
@@ -1,15 +1,26 @@
 <div class="row container move8down">
   <p class="h3"> Meld je aan </p>
   <div class="cardBorder text-white text-opacity-75 text">
-    <form>
+    <form #registerForm="ngForm" name="form" (ngSubmit)="onSubmit()" novalidate>
       <div class="container move30down">
         <div class="row row-cols-2">
           <div class="col">
             <div class="d-flex flex-row align-items-center mb-4">
               <i class="fas fa-user fa-lg me-3 fa-fw"></i>
               <div class="form-outline flex-fill mb-0">
-                <input type="text" id="form3Example1c" class="form-control" />
-                <label class="form-label" for="form3Example1c">Jouw naam</label>
+                <input type="text" id="username" name="username" class="form-control" [(ngModel)]="formData.username"
+                  #username="ngModel" minlength="3" required [ngClass]="{
+                  'is-invalid': username.invalid && username.touched
+              }" />
+                <div *ngIf="username.invalid && username.touched" class="invalid-feedback">
+                  <div *ngIf="username.errors!['required']">
+                    Gebruikersnaam is verplicht
+                  </div>
+                  <div *ngIf="username.errors!['minlength']">
+                    Gebruikersnaam moet minimaal 3 karakters hebben.
+                  </div>
+                </div>
+                <label class="form-label" for="username">Jouw gebruikersnaam</label>
               </div>
             </div>
           </div>
@@ -17,8 +28,21 @@
             <div class="d-flex flex-row align-items-center mb-4">
               <i class="fas fa-envelope fa-lg me-3 fa-fw"></i>
               <div class="form-outline flex-fill mb-0">
-                <input type="email" id="form3Example3c" class="form-control" />
-                <label class="form-label" for="form3Example3c">Jouw e-mailadres</label>
+                <div class="form-outline flex-fill mb-0">
+                  <input type="text" id="emailaddress" name="emailaddress" class="form-control"
+                    [(ngModel)]="formData.emailAddress" #emailaddress="ngModel" minlength="6" required [ngClass]="{
+                    'is-invalid': emailaddress.invalid && emailaddress.touched
+                }" />
+                  <div *ngIf="emailaddress.invalid && emailaddress.touched" class="invalid-feedback">
+                    <div *ngIf="emailaddress.errors!['required']">
+                      E-mailadres is verplicht
+                    </div>
+                    <div *ngIf="emailaddress.errors!['minlength']">
+                      Voer een geldig e-mailadres in.
+                    </div>
+                  </div>
+                  <label class="form-label" for="username">Jouw e-mailadres</label>
+                </div>
               </div>
             </div>
           </div>
@@ -26,33 +50,30 @@
             <div class="d-flex flex-row align-items-center mb-2">
               <i class="fas fa-lock fa-lg me-3 fa-fw"></i>
               <div class="form-outline flex-fill mb-0">
-                <input type="password" id="form3Example4c" class="form-control" />
-                <label class="form-label" for="form3Example4c">Wachtwoord</label>
+                <input type="password" id="password" name="password" class="form-control"
+                  [(ngModel)]="formData.password" #password="ngModel" minlength="3" required [ngClass]="{
+                  'is-invalid': password.invalid && password.touched
+              }" />
+                <div *ngIf="password.invalid && password.touched" class="invalid-feedback">
+                  <div *ngIf="password.errors!['required']">
+                    Wachtwoord is verplicht
+                  </div>
+                  <div *ngIf="password.errors!['minlength']">
+                    Wachtwoord moet minimaal 3 karakters hebben.
+                  </div>
+                </div>
+                <label class="form-label" for="password">Wachtwoord</label>
               </div>
             </div>
           </div>
-          <div class="col">
-            <div class="d-flex flex-row align-items-center mb-2">
-              <i class="fas fa-key fa-lg me-3 fa-fw"></i>
-              <div class="form-outline flex-fill mb-0">
-                <input type="password" id="form3Example4cd" class="form-control" />
-                <label class="form-label" for="form3Example4cd">Herhaal jouw wachtwoord</label>
-              </div>
-            </div>
-          </div>
-        </div>
-
-        <div class="form-check mb-3">
-          <input class="form-check-input mx-2 move5down" type="checkbox" value="" id="checkbox" />
-          <label class="form-check-label " for="checkbox">
-            Ik ga akkoord met alle verklaringen in de servicevoorwaarden
-            <a href="https://policies.google.com/terms?hl=nl">Terms of service</a>
-          </label>
         </div>
         <div class=" mx-4 mb-3 mb-lg-4">
-          <button type="button" class="btn btn-primary btn-medium minWidthButton" routerLink="/login">
+          <button type="submit" class="btn btn-primary btn-medium minWidthButton" [disabled]="!registerForm.valid">
             Aanmelden
           </button>
+          <label class="move20right">
+            <a routerLink="/login">Al een account? Log in.</a>
+          </label>
         </div>
       </div>
     </form>
