BRUUUUUUUH stupid quotation marks
Im so glad I didnt continue api-failed-attempt branch or else I would lose quadriple the time.

--- a/apps/meal-delivery/src/app/pages/meal/edit/edit.component.html
+++ b/apps/meal-delivery/src/app/pages/meal/edit/edit.component.html
@@ -88,7 +88,7 @@
             Maaltijd toevoegen
           </div>
         </button>
-        <button class="btn btn-warning mx-2" routerLink="/meal">Annuleren</button>
+        <button class="btn btn-warning mx-2">Annuleren</button>
       </div>
       <div *ngIf="componentExists && meal" class="col move20up">
         <button type="submit" class="btn btn-primary mx-2" [disabled]="!mealEditForm.valid">
@@ -100,7 +100,7 @@
             Maaltijd toevoegen
           </div>
         </button>
-        <button class="btn btn-warning mx-2" routerLink="/meal">Annuleren</button>
+        <button class="btn btn-warning mx-2">Annuleren</button>
       </div>
     </div>
   </form>
