--- a/apps/meal-delivery/src/app/pages/product/edit/edit.component.html
+++ b/apps/meal-delivery/src/app/pages/product/edit/edit.component.html
@@ -64,7 +64,7 @@
             Product toevoegen
           </div>
         </button>
-        <button class="btn btn-warning mx-2" routerLink="/product">Annuleren</button>
+        <button class="btn btn-warning mx-2">Annuleren</button>
       </div>
     </div>
   </form>
