--- a/apps/meal-delivery/src/app/pages/studentHouse/edit/edit.component.html
+++ b/apps/meal-delivery/src/app/pages/studentHouse/edit/edit.component.html
@@ -45,7 +45,7 @@
             Studentenhuis toevoegen
           </div>
         </button>
-        <button class="btn btn-warning mx-2" routerLink="/studentHouse">Annuleren</button>
+        <button class="btn btn-warning mx-2">Annuleren</button>
       </div>
     </div>
   </form>
