--- a/apps/meal-delivery/src/app/pages/user/edit/edit.component.html
+++ b/apps/meal-delivery/src/app/pages/user/edit/edit.component.html
@@ -124,7 +124,7 @@
             Gebruiker toevoegen
           </div>
         </button>
-        <button class="btn btn-warning mx-2" routerLink="/user">Annuleren</button>
+        <button class="btn btn-warning mx-2">Annuleren</button>
       </div>
     </div>
   </form>
