--- a/apps/meal-delivery/src/app/pages/meal/list/list.component.html
+++ b/apps/meal-delivery/src/app/pages/meal/list/list.component.html
@@ -10,7 +10,7 @@
       <br>
       <div class="mb240">
         <div class="row">
-          <div class="col-sm-12 col-md-auto col-lg-6" *ngFor="let meal of meals; let i = index">
+          <div class="col-sm-12 col-md-auto col-lg-6" *ngFor="let meal of meals$ | async; let i = index">
             <div class="card">
               <div class="card-body">
                 <h5 class="card-title">{{meal.name}}</h5>
