--- a/apps/meal-delivery/src/app/pages/studentHouse/detail/detail.component.html
+++ b/apps/meal-delivery/src/app/pages/studentHouse/detail/detail.component.html
@@ -1,4 +1,4 @@
-<div class="row">
+<div class="row" *ngIf="studentHouse$ | async as studentHouse">
   <div class="col-sm-10 col-md-12 col-lg-9">
     <div class="d-flex justify-content-between align-items-center">
       <h3 class="card-title">Studentenhuis {{ studentHouse?.streetAndNmr }}</h3>
