--- a/apps/meal-delivery/src/app/pages/meal/detail/detail.component.html
+++ b/apps/meal-delivery/src/app/pages/meal/detail/detail.component.html
@@ -1,15 +1,15 @@
 <div class="row" *ngIf="meal$ | async as meal">
   <div class="col-sm-10 col-md-12 col-lg-9">
     <div class="d-flex justify-content-between align-items-center">
-      <h3 class="card-title">Maaltijd {{ meal?.name }}</h3>
+      <h3 class="card-title">Maaltijd {{meal?.name}}</h3>
       <button type="button" class="btn btn-primary move5down" routerLink="edit">Maaltijd bewerken</button>
     </div>
     <ul>
-      <li>Restaurant: {{meal?.restaurant}}</li>
-      <li>Prijs: € {{ toDecimal(meal?.price) }}</li>
-      <li *ngIf="meal?.deliveryTime">Bezorgtijd: {{ meal?.deliveryTime | date:"HH:mm" }}</li>
+      <li>Restaurant: {{meal?.restaurant?.name}}</li>
+      <li>Prijs: € {{toDecimal(meal?.price)}}</li>
+      <li *ngIf="meal?.deliveryTime">Bezorgtijd: {{meal?.deliveryTime | date:"HH:mm"}}</li>
       <li *ngIf="!meal?.deliveryTime">Bezorgtijd: maaltijd nog niet gereserveerd.</li>
-      <li *ngIf="meal?.deliveryDate">Bezorgdatum: {{meal?.deliveryDate?.toLocaleDateString('nl-NL')}}</li>
+      <li *ngIf="meal?.deliveryDate">Bezorgdatum: {{meal?.deliveryDate | date: "dd-MM-YYYY"}}</li>
       <li *ngIf="!meal?.deliveryDate">Bezorgdatum: maaltijd nog niet gereserveerd.</li>
     </ul>
   </div>
