IM DONE "Unauthorized??" I changed nothing, 3 hrs wasted, suddenly works
LIKE WHYYYYYYYYYYY?????????? And subscribe is also 1.5 hour wasted

--- a/apps/meal-delivery/src/app/pages/user/detail/detail.component.html
+++ b/apps/meal-delivery/src/app/pages/user/detail/detail.component.html
@@ -9,7 +9,7 @@
       <li>Geboortedatum: {{user?.birthDate | date: "dd-MM-YYYY"}}</li>
       <li *ngIf="user?.isGraduated">Is al afgestudeerd.</li>
       <li *ngIf="!user?.isGraduated">Is nog niet afgestudeerd.</li>
-      <li>Telefoonnummer: {{user?.phoneNumber}}</li>
+      <li *ngIf="user?.phoneNumber">Telefoonnummer: {{user?.phoneNumber}}</li>
     </ul>
   </div>
 </div>
