--- a/apps/meal-delivery/src/app/pages/user/detail/detail.component.html
+++ b/apps/meal-delivery/src/app/pages/user/detail/detail.component.html
@@ -1,12 +1,11 @@
 <div class="row" *ngIf="user$ | async as user">
   <div class="col-sm-10 col-md-12 col-lg-9">
     <div class="d-flex justify-content-between align-items-center">
-      <h3 class="card-title">Profiel van {{user?.name}}</h3>
+      <h3 class="card-title">Profiel van {{user?.username}}</h3>
       <button type="button" class="btn btn-primary move5down" routerLink="edit">Gebruiker bewerken</button>
     </div>
     <ul>
       <li>E-mailadres: {{user?.emailAddress}}</li>
-      <li>Geboortedatum: {{user?.birthDate | date: "dd-MM-YYYY"}}</li>
       <li *ngIf="user?.isGraduated">Is al afgestudeerd.</li>
       <li *ngIf="!user?.isGraduated">Is nog niet afgestudeerd.</li>
       <li *ngIf="user?.phoneNumber">Telefoonnummer: {{user?.phoneNumber}}</li>
