--- a/apps/meal-delivery/src/app/pages/user/edit/edit.component.html
+++ b/apps/meal-delivery/src/app/pages/user/edit/edit.component.html
@@ -1,5 +1,5 @@
 <div *ngIf="componentExists && user">
-  <h3>Bewerken van {{ userName }}</h3>
+  <h3>Bewerken van {{ user.username }}</h3>
 </div>
 <div *ngIf="!componentExists">
   <h3>Nieuwe gebruiker toevoegen</h3>
