--- a/apps/meal-delivery/src/app/pages/studentHouse/edit/edit.component.html
+++ b/apps/meal-delivery/src/app/pages/studentHouse/edit/edit.component.html
@@ -1,5 +1,5 @@
 <div *ngIf="componentExists && studentHouse">
-  <h3>Bewerken van {{ studentHouse.name }}</h3>
+  <h3>Bewerken van {{ studentHouse!.streetAndNmr }}</h3>
 </div>
 <div *ngIf="!componentExists">
   <h3>Nieuwe studentenhuis toevoegen</h3>
@@ -8,25 +8,58 @@
   <!-- Edit form voor studentHouse model -->
   <form #studentHouseEditForm="ngForm" name="form" (ngSubmit)="onSubmit()" novalidate>
     <div class="row">
-      <div class="col">
-        <!-- streetAndNmr -->
-        <div class="col-8">
-          <div class="form-group">
-            <label for="streetAndNmr">Straat en huisnummer</label>
-            <input type="text" id="streetAndNmr" name="streetAndNmr" class="form-control"
-              [(ngModel)]="studentHouse!.streetAndNmr" #streetAndNmr="ngModel" minlength="3" required [ngClass]="{
-                          'is-invalid': streetAndNmr.invalid && streetAndNmr.touched
-                      }" />
-            <div *ngIf="streetAndNmr.invalid && streetAndNmr.touched" class="invalid-feedback">
-              <div *ngIf="streetAndNmr.errors!['required']">
-                Straat en huisnummer is verplicht
-              </div>
-              <div *ngIf="streetAndNmr.errors!['minlength']">
-                De straat en huisnummer moet 3 karakters lang zijn.
-              </div>
+      <div class="col-5">
+        <!-- streetandnmr -->
+        <div class="form-group">
+          <label for="streetandnmr">Straat en huisnummer</label>
+          <input type="text" id="streetandnmr" name="streetandnmr" class="form-control"
+            [(ngModel)]="studentHouse!.streetAndNmr" #streetAndNmr="ngModel" minlength="3" required [ngClass]="{
+                        'is-invalid': streetAndNmr.invalid && streetAndNmr.touched
+                    }" />
+          <div *ngIf="streetAndNmr.invalid && streetAndNmr.touched" class="invalid-feedback">
+            <div *ngIf="streetAndNmr.errors!['required']">
+              Straat en huisnummer is verplicht
+            </div>
+            <div *ngIf="streetAndNmr.errors!['minlength']">
+              De straat en huisnummer moet 3 karakters lang zijn.
             </div>
           </div>
         </div><br>
+        <!-- city -->
+        <div class="form-group">
+          <label for="city">Stad</label>
+          <input type="text" id="city" name="city" class="form-control" [(ngModel)]="studentHouse!.city" #city="ngModel"
+            minlength="3" required [ngClass]="{
+                                'is-invalid': city.invalid && city.touched
+                            }" />
+          <div *ngIf="city.invalid && city.touched" class="invalid-feedback">
+            <div *ngIf="city.errors!['required']">
+              Stad is verplicht
+            </div>
+            <div *ngIf="city.errors!['minlength']">
+              Stad moet 3 karakters lang zijn.
+            </div>
+          </div>
+        </div><br>
+        <!-- postcode -->
+        <div class="form-group">
+          <label for="postcode">Postcode</label>
+          <input type="text" id="postcode" name="postcode" class="form-control" [(ngModel)]="studentHouse!.postcode"
+            #postcode="ngModel" minlength="3" required [ngClass]="{
+                        'is-invalid': postcode.invalid && postcode.touched
+                    }" />
+          <div *ngIf="postcode.invalid && postcode.touched" class="invalid-feedback">
+            <div *ngIf="postcode.errors!['required']">
+              Postcode is verplicht
+            </div>
+            <div *ngIf="postcode.errors!['minlength']">
+              Postcode moet 6 karakters lang zijn.
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="col"><br>
         <div class="col-8">
           <pre>{{ studentHouse | json }}</pre>
         </div>
@@ -35,7 +68,7 @@
     <br>
 
     <!-- Submit en Cancel buttons -->
-    <div class="row">
+    <div class="row minHe100">
       <div class="col">
         <button type="submit" class="btn btn-primary mx-2" [disabled]="!studentHouseEditForm.valid">
           <div *ngIf="componentExists && studentHouse">
