--- a/apps/meal-delivery/src/app/pages/product/edit/edit.component.html
+++ b/apps/meal-delivery/src/app/pages/product/edit/edit.component.html
@@ -1,5 +1,5 @@
 <div *ngIf="componentExists && product">
-  <h3>Bewerken van {{ productName }}</h3>
+  <h3>Bewerken van {{ product.name }}</h3>
 </div>
 <div *ngIf="!componentExists">
   <h3>Nieuwe product toevoegen</h3>
@@ -14,16 +14,18 @@
         <button type="button" class="btn btn-primary move10left" (click)="addAllergy()">+ Voeg allergieën
           toe</button><br>
         <label class="move10left">(Voor geen waarde kiest u de lege optie.)</label>
-        <div *ngFor="let allergy of product!.allergies!; let i = index">
-          <div class="form-group">
-            <label for="allergies">{{allergy.charAt(0).toUpperCase() +
-              allergy.slice(1)}}</label>
-            <select class="form-select move10left" id="allergies" name="allergies" class="form-control"
-              [(ngModel)]="product!.allergies[i]">
-              <option label=""></option>
-              <option *ngFor="let allergyType of allergyTypes" [value]="allergyType">
-                {{allergyType}}</option>
-            </select>
+        <div *ngIf="product?.allergies">
+          <div *ngFor="let allergy of product!.allergies!; let i = index">
+            <div class="form-group">
+              <label for="allergies">{{allergy.charAt(0).toUpperCase() +
+                allergy.slice(1)}}</label>
+              <select class="form-select move10left" id="allergies" name="allergies" class="form-control"
+                [(ngModel)]="product!.allergies[i]">
+                <option label=""></option>
+                <option *ngFor="let allergyType of allergyTypes" [value]="allergyType">
+                  {{allergyType}}</option>
+              </select>
+            </div>
           </div>
         </div>
       </div>
@@ -31,17 +33,19 @@
         <!-- name -->
         <div class="col-8">
           <div class="form-group">
-            <label for="name">Naam</label>
-            <input type="text" id="name" name="name" class="form-control" [(ngModel)]="product!.name" #name="ngModel"
-              minlength="3" required [ngClass]="{
+            <div *ngIf="product?.allergies">
+              <label for="name">Naam</label>
+              <input type="text" id="name" name="name" class="form-control" [(ngModel)]="product!.name" #name="ngModel"
+                minlength="3" required [ngClass]="{
                           'is-invalid': name.invalid && name.touched
                       }" />
-            <div *ngIf="name.invalid && name.touched" class="invalid-feedback">
-              <div *ngIf="name.errors!['required']">
-                Naam is verplicht
-              </div>
-              <div *ngIf="name.errors!['minlength']">
-                De naam moet 3 karakters lang zijn.
+              <div *ngIf="name.invalid && name.touched" class="invalid-feedback">
+                <div *ngIf="name.errors!['required']">
+                  Naam is verplicht
+                </div>
+                <div *ngIf="name.errors!['minlength']">
+                  De naam moet 3 karakters lang zijn.
+                </div>
               </div>
             </div>
           </div>
