--- a/apps/meal-delivery/src/app/pages/user/edit/edit.component.html
+++ b/apps/meal-delivery/src/app/pages/user/edit/edit.component.html
@@ -13,16 +13,18 @@
           <!-- username -->
           <div class="form-group">
             <label for="username">Gebruikersnaam</label>
-            <input type="text" id="username" name="username" class="form-control" [(ngModel)]="user!.username"
-              #username="ngModel" minlength="3" required [ngClass]="{
+            <div *ngIf="user?.username">
+              <input type="text" id="username" name="username" class="form-control" [(ngModel)]="user!.username"
+                #username="ngModel" minlength="3" required [ngClass]="{
                           'is-invalid': username.invalid && username.touched
                       }" />
-            <div *ngIf="username.invalid && username.touched" class="invalid-feedback">
-              <div *ngIf="username.errors!['required']">
-                Gebruikersnaam is verplicht
-              </div>
-              <div *ngIf="username.errors!['minlength']">
-                De gebruikersnaam moet 3 karakters lang zijn.
+              <div *ngIf="username.invalid && username.touched" class="invalid-feedback">
+                <div *ngIf="username.errors!['required']">
+                  Gebruikersnaam is verplicht
+                </div>
+                <div *ngIf="username.errors!['minlength']">
+                  De gebruikersnaam moet 3 karakters lang zijn.
+                </div>
               </div>
             </div>
           </div>
@@ -31,16 +33,18 @@
         <div class="row-5">
           <div class="form-group">
             <label for="emailaddress">E-mailadres</label>
-            <input type="text" id="emailaddress" name="emailaddress" class="form-control"
-              [(ngModel)]="user!.emailAddress" #emailaddress="ngModel" minlength="3" required [ngClass]="{
+            <div *ngIf="user?.emailAddress">
+              <input type="text" id="emailaddress" name="emailaddress" class="form-control"
+                [(ngModel)]="user!.emailAddress" #emailaddress="ngModel" minlength="3" required [ngClass]="{
                         'is-invalid': emailaddress.invalid && emailaddress.touched
                     }" />
-            <div *ngIf="emailaddress.invalid && emailaddress.touched" class="invalid-feedback">
-              <div *ngIf="emailaddress.errors!['required']">
-                E-mailadres is verplicht
-              </div>
-              <div *ngIf="emailaddress.errors!['minlength']">
-                De E-mailadres moet 3 karakters lang zijn.
+              <div *ngIf="emailaddress.invalid && emailaddress.touched" class="invalid-feedback">
+                <div *ngIf="emailaddress.errors!['required']">
+                  E-mailadres is verplicht
+                </div>
+                <div *ngIf="emailaddress.errors!['minlength']">
+                  De E-mailadres moet 3 karakters lang zijn.
+                </div>
               </div>
             </div>
           </div>
@@ -49,16 +53,18 @@
         <div class="row-5 move5down">
           <div class="form-group">
             <label for="phonenumber">Telefoonnummer</label>
-            <input type="text" id="phonenumber" name="phonenumber" class="form-control" [(ngModel)]="user!.phoneNumber"
-              #phonenumber="ngModel" minlength="10" maxlength="10" required [ngClass]="{
+            <div *ngIf="user?.phoneNumber">
+              <input type="text" id="phonenumber" name="phonenumber" class="form-control"
+                [(ngModel)]="user!.phoneNumber" #phonenumber="ngModel" minlength="10" maxlength="10" required [ngClass]="{
                           'is-invalid': phonenumber.invalid && phonenumber.touched
                       }" />
-            <div *ngIf="phonenumber.invalid && phonenumber.touched" class="invalid-feedback">
-              <div *ngIf="phonenumber.errors!['required']">
-                Telefoonnummer is verplicht
-              </div>
-              <div *ngIf="phonenumber.errors!['minlength']">
-                De Telefoonnummer moet 10 karakters lang zijn.
+              <div *ngIf="phonenumber.invalid && phonenumber.touched" class="invalid-feedback">
+                <div *ngIf="phonenumber.errors!['required']">
+                  Telefoonnummer is verplicht
+                </div>
+                <div *ngIf="phonenumber.errors!['minlength']">
+                  De Telefoonnummer moet 10 karakters lang zijn.
+                </div>
               </div>
             </div>
           </div>
@@ -66,9 +72,11 @@
         <!-- isgraduated -->
         <div class="row-5">
           <div class="form-check">
-            <input class="form-check-input" type="checkbox" id="isgraduated" name="isgraduated"
-              [(ngModel)]="user!.isGraduated" #isgraduated="ngModel" />
-            <label for="isgraduated">Is afgestudeerd</label>
+            <div *ngIf="user?.isGraduated">
+              <input class="form-check-input" type="checkbox" id="isgraduated" name="isgraduated"
+                [(ngModel)]="user!.isGraduated" #isgraduated="ngModel" />
+              <label for="isgraduated">Is afgestudeerd</label>
+            </div>
           </div>
         </div>
         <br>
