--- a/apps/meal-delivery/src/app/pages/meal/edit/edit.component.html
+++ b/apps/meal-delivery/src/app/pages/meal/edit/edit.component.html
@@ -12,7 +12,7 @@
       <div class="col-5">
         <div class="form-group">
           <label for="name">Naam</label>
-          <div *ngIf="meal?.name">
+          <div *ngIf="meal">
             <input type="text" id="name" name="name" class="form-control" [(ngModel)]="meal!.name" #name="ngModel"
               minlength="3" required [ngClass]="{
                         'is-invalid': name.invalid && name.touched
