--- a/apps/meal-delivery/src/app/pages/product/edit/edit.component.html
+++ b/apps/meal-delivery/src/app/pages/product/edit/edit.component.html
@@ -14,7 +14,7 @@
         <button type="button" class="btn btn-primary move10left" (click)="addAllergy()">+ Voeg allergieën
           toe</button><br>
         <label class="move10left">(Voor geen waarde kiest u de lege optie.)</label>
-        <div *ngIf="product?.allergies">
+        <div *ngIf="product">
           <div *ngFor="let allergy of product!.allergies!; let i = index">
             <div class="form-group">
               <label for="allergies">{{allergy.charAt(0).toUpperCase() +
@@ -27,11 +27,25 @@
               </select>
             </div>
           </div>
+        </div><br>
+        <!-- Submit en Cancel buttons -->
+        <div class="col">
+          <div class="row-5">
+            <button type="submit" class="btn btn-primary mx-2" [disabled]="!productEditForm.valid">
+              <div *ngIf="componentExists && product">
+                Product bewerken
+              </div>
+              <div *ngIf="!componentExists">
+                Product toevoegen
+              </div>
+            </button>
+            <button type="button" class="btn btn-warning mx-2" routerLink="/product">Annuleren</button>
+          </div>
         </div>
       </div>
-      <div class="col">
+      <div class="col-5">
         <!-- name -->
-        <div class="col-8">
+        <div class="row-5">
           <div class="form-group">
             <div *ngIf="product">
               <label for="name">Naam</label>
@@ -50,25 +64,19 @@
             </div>
           </div>
         </div><br>
-        <div class="col-8">
+        <div class="row-5">
           <pre>{{ product | json }}</pre>
         </div>
-      </div>
-    </div>
-    <br>
-
-    <!-- Submit en Cancel buttons -->
-    <div class="row">
-      <div class="col">
-        <button type="submit" class="btn btn-primary mx-2" [disabled]="!productEditForm.valid">
-          <div *ngIf="componentExists && product">
-            Product bewerken
+        <!-- containsAlcohol -->
+        <div class="row-5">
+          <div *ngIf="product">
+            <div class="form-check">
+              <label for="containsalcohol">Bevat alcohol</label>
+              <input class="form-check-input" type="checkbox" id="containsalcohol" name="containsalcohol"
+                [(ngModel)]="product!.containsAlcohol" #containsalcohol="ngModel" />
+            </div>
           </div>
-          <div *ngIf="!componentExists">
-            Product toevoegen
-          </div>
-        </button>
-        <button type="button" class="btn btn-warning mx-2" routerLink="/product">Annuleren</button>
+        </div>
       </div>
     </div>
   </form>
