--- a/apps/meal-delivery/src/styles.css
+++ b/apps/meal-delivery/src/styles.css
@@ -163,6 +163,10 @@ a:visited:hover {
   margin-left: 100px;
 }
 
+.move10left {
+  margin-left: -10px;
+}
+
 .minWidthButton {
   width: 154.21px;
 }
