--- a/apps/meal-delivery/src/app/pages/about/about.component.html
+++ b/apps/meal-delivery/src/app/pages/about/about.component.html
@@ -34,7 +34,6 @@
       <li>Student</li>
       <li>Bezorger</li>
       <li>Maaltijd</li>
-      <li>Restaurant</li>
       <li>Product</li>
     </ul>
     <p>
@@ -55,9 +54,9 @@
   </div>
 </div>
 
-<div class="move150down max-width77">
+<div class="move30down max-width77">
   <h3>Entiteiten</h3>
-  <p>De entiteiten zijn: Studentenhuis, Student, Bezorger, Maaltijd, Restaurant en Product. </p><br>
+  <p>De entiteiten zijn: Studentenhuis, Student, Bezorger, Maaltijd en Product. </p><br>
   <p>Hoe het werkt, is dat je bijvoorbeeld kijkt (Zie afbeelding hieronder) naar Studentenhuis en Student. Je ziet dan
     dat een student woont in een studentenhuis. Ze zijn verbonden door een pijl, de binnenste met een cirkel en een
     streep wordt modaliteit genoemd, en de buitenste met meerdere streepjes en één streep wordt kardinaliteit genoemd.
@@ -74,7 +73,7 @@
 
   <img src="assets/img/erd.png" class="img-fluid erd" alt="ERD" />
 
-  <div class="row move70down">
+  <div class="row move30down">
     <div class="col-sm-12 col-md-4">
       <p>Studentenhuis</p>
       <ul>
@@ -113,17 +112,6 @@
       </ul>
     </div>
     <div class="col-sm-12 col-md-4">
-      <p>Restaurant</p>
-      <ul>
-        <li>naam: string</li>
-        <li>StraatEnHuisnummer: string</li>
-        <li>Stad: string</li>
-        <li>Postcode: string</li>
-        <li>TelefoonNmr: string</li>
-        <li>Openingstijden: date</li>
-      </ul>
-    </div>
-    <div class="col-sm-12 col-md-4">
       <p>Product</p>
       <ul>
         <li>naam: string</li>
@@ -133,7 +121,7 @@
     </div>
   </div>
 
-  <div class="row minHe800">
+  <div class="row minHe50">
     <div class="col">
       <h3>Userstories</h3>
       <p> Hier zijn de functionaliteiten van deze applicatie.</p>
@@ -183,28 +171,28 @@
           <tr>
             <td>6</td>
             <td>
-              Als restaurant wil ik een maaltijd kunnen aanmaken.
+              Als eigenaar wil ik een maaltijd kunnen aanmaken.
             </td>
             <td>Overzicht is een grid.</td>
           </tr>
           <tr>
             <td>7</td>
             <td>
-              Als restaurant wil ik een maaltijd kunnen wijzigen.
+              Als eigenaar wil ik een maaltijd kunnen wijzigen.
             </td>
             <td>Overzicht is een grid.</td>
           </tr>
           <tr>
             <td>8</td>
             <td>
-              Als restaurant wil ik een maaltijd kunnen verwijderen.
+              Als eigenaar wil ik een maaltijd kunnen verwijderen.
             </td>
             <td>Overzicht is een grid.</td>
           </tr>
           <tr>
             <td>9</td>
             <td>
-              Als restaurant wil ik een maaltijd kunnen toewijzen aan een bezorger.
+              Als eigenaar wil ik een maaltijd kunnen toewijzen aan een bezorger.
             </td>
             <td>Overzicht is een grid.</td>
           </tr>
