--- a/apps/meal-delivery/src/app/app.component.css
+++ b/apps/meal-delivery/src/app/app.component.css
@@ -1,8 +1,8 @@
 .background {
   display: flex;
-  margin-top: 60px;
+  margin-top: 3.9vw;
   background-image: url(/assets/img/dashboardBg.webp);
-  background-size: 1540px;
+  background-size: 100vw;
   flex-direction: column;
   min-height: 631px;
 }
