--- a/apps/meal-delivery/src/app/pages/about/about.component.css
+++ b/apps/meal-delivery/src/app/pages/about/about.component.css
@@ -1,18 +1,18 @@
 .profile-pic {
   width: 90px;
-  margin-right: -20px;
+  margin-right: -15px;
 }
 
 .pfp {
   margin-top: 50px;
-  margin-left: 10px;
+  margin-left: 0;
   background: linear-gradient(
     90deg,
     rgba(130, 130, 169, 0.9514356084230567) 0%,
     rgba(199, 81, 66, 0.9562255243894433) 50%,
     rgba(130, 130, 169, 0.9562255243894433) 100%
   ) !important;
-  padding: 30px 80px;
+  padding: 1.9vw 5.2vw;
 }
 
 ul {
@@ -25,6 +25,6 @@ ul {
   margin-bottom: 12px;
 }
 
-.minHe800 {
-  min-height: 800px;
+.minHe50 {
+  min-height: 50vw;
 }
