--- a/apps/meal-delivery/src/app/pages/meal/detail/detail.component.html
+++ b/apps/meal-delivery/src/app/pages/meal/detail/detail.component.html
@@ -5,7 +5,7 @@
       <button type="button" class="btn btn-primary move5down" routerLink="edit">Maaltijd bewerken</button>
     </div>
     <ul>
-      <li>Restaurant: {{meal?.restaurant?.name}}</li>
+      <li>Eigenaar: {{meal?.owner.name}}</li>
       <li>Prijs: € {{toDecimal(meal?.price)}}</li>
       <li *ngIf="meal?.deliveryTime">Bezorgtijd: {{meal?.deliveryTime | date:"HH:mm"}}</li>
       <li *ngIf="!meal?.deliveryTime">Bezorgtijd: maaltijd nog niet gereserveerd.</li>
