--- a/apps/meal-delivery/src/app/pages/meal/list/list.component.html
+++ b/apps/meal-delivery/src/app/pages/meal/list/list.component.html
@@ -1,4 +1,4 @@
-<div class="row container">
+<div class="row container list">
   <div class="d-flex justify-content-between align-items-center">
     <h3 class="card-title">Maaltijden lijst</h3>
     <div>
@@ -15,7 +15,7 @@
               <div class="card-body">
                 <h5 class="card-title">{{meal.name}}</h5>
                 <ul class="noBullets">
-                  <li>Restaurant: {{meal.restaurant?.name}}</li>
+                  <li>Eigenaar: {{meal.owner.name}}</li>
                   <li>Bezorgtijd: {{meal?.deliveryTime | date:"HH:mm"}}</li>
                   <li>Bezorgdatum: {{meal?.deliveryDate | date: "dd-MM-YYYY"}}</li>
                   <li> <a routerLink="{{ meal.id }}" routerLinkActive="active" ariaCurrentWhenActive="page">Klik hier
