--- a/apps/meal-delivery/src/app/pages/product/list/list.component.html
+++ b/apps/meal-delivery/src/app/pages/product/list/list.component.html
@@ -1,4 +1,4 @@
-<div class="row container">
+<div class="row container list">
   <div class="d-flex justify-content-between align-items-center">
     <h3 class="card-title">Producten lijst</h3>
     <div>
