--- a/apps/meal-delivery/src/app/pages/user/detail/detail.component.html
+++ b/apps/meal-delivery/src/app/pages/user/detail/detail.component.html
@@ -8,6 +8,7 @@
       <li>E-mailadres: {{user?.emailAddress}}</li>
       <li *ngIf="user?.isGraduated">Is al afgestudeerd.</li>
       <li *ngIf="!user?.isGraduated">Is nog niet afgestudeerd.</li>
+      <li>Rol: {{user?.role}}</li>
     </ul>
   </div>
 </div>
