--- a/apps/meal-delivery/src/app/pages/product/list/list.component.html
+++ b/apps/meal-delivery/src/app/pages/product/list/list.component.html
@@ -26,7 +26,7 @@
                       hier
                       voor meer details.</a></li>
                 </ul>
-                <div align="end"><a class="edit" title="Bewerken" data-toggle="tooltip"
+                <div class="alignEnd"><a class="edit" title="Bewerken" data-toggle="tooltip"
                     routerLink="{{ product.id }}/edit" routerLinkActive="active"><i
                       class="material-icons">&#xE254;</i></a>
                   <a class="delete" title="Verwijderen" data-toggle="tooltip" (click)="deleteProduct(product.id!)"
