--- a/apps/meal-delivery/src/app/pages/studentHouse/list/list.component.html
+++ b/apps/meal-delivery/src/app/pages/studentHouse/list/list.component.html
@@ -21,7 +21,7 @@
                   <li><a routerLink="{{ studentHouse.id }}" routerLinkActive="active" ariaCurrentWhenActive="page">Klik
                       hier voor meer details.</a></li>
                 </ul>
-                <div align="end"><a class="edit" title="Bewerken" data-toggle="tooltip"
+                <div class="alignEnd"><a class="edit" title="Bewerken" data-toggle="tooltip"
                     routerLink="{{ studentHouse.id }}/edit" routerLinkActive="active"><i
                       class="material-icons">&#xE254;</i></a>
                   <a class="delete" title="Verwijderen" data-toggle="tooltip"
